--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "recharts": "^2.9.2"
   },
   "devDependencies": {
